@@ -183,7 +183,7 @@
 	* tools/zipme.sh: Force directory name to be nuttx-xx.yy.zz
 	* fs/fs_opendir.c: Correct errors in semaphore usage that can cause deadlock.
 	* lib/lib_getopt.c: Added getopt() support
-	* examples/nsh:  NSH now supports cat, mount, umount, and mkdir.  ls supports
+	* examples/nsh/:  NSH now supports cat, mount, umount, and mkdir.  ls supports
 	  -l -s, and -R
 	* Added basic OS support to manage environment variables:  environment
 	  storage, cloning on task creation, sharing on pthread creation, destruction
@@ -193,6 +193,9 @@
 	* Correct an error in realloc() when the block is extended "down" in memory.
 	  In this case, the old memory contents need to be copied to the new location
 	  and an allocated bit was not being set.
-	* examples/ostest: Added an environment variable test.
+	* examples/ostest/: Added an environment variable test.
+	* examples/nsh/: Break into several files.
+	* lib/: Added strrchr, basename, dirname
+	* examples/nsh/: Add cp command
 	* Started m68322
 
